<resources>
    <!-- Global strings -->
    <string name="app_name">Sporter</string>
    <string name="no_internet">No hay conexión a internet</string>
    <string name="logout">Cerrar sesión</string>
    <string name="app_devs" translatable="false">Adei Arias\nÁlvaro Hernández\nAnder Prieto\nAnder Sanjuan</string>
    <string name="version" translatable="false">v1.0</string>

    <!-- Login activity strings -->
    <!-- Main -->
    <string name="login_name">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_log_in">Iniciar sesión</string>
    <string name="login_register_here">¿No tienes cuenta? Regístrate aquí</string>
    <string name="login_wrong_user_pass">No existe ningún usuario con ese nombre o la contraseña es incorrecta</string>
    <!-- Create -->
    <string name="login_register">Regístrate</string>
    <string name="login_no_empty_field">No puede haber ningún campo vacío</string>
    <string name="login_pass_requirements">La contraseña debe tener al menos 6 caracteres</string>
    <string name="login_user_in_use">Ese nombre de usuario ya está escogido. Elige otro</string>
    <string name="login_registered_correctly">Registrado correctamente. Inicia sesión</string>
    <!-- TeamButtons -->
    <string name="login_btn_create">Crear equipo</string>
    <string name="login_btn_find">Unirse a equipo</string>
    <!-- Create -->
    <string name="login_enter_name">Introducir nombre del equipo</string>
    <string name="login_choose_image">Escoger imagen</string>
    <string name="login_register_team">Registrar equipo</string>
    <string name="login_team_in_use">Ese nombre de equipo ya está escogido. Elige otro</string>

    <!-- Find -->
    <string name="login_wrong_team_pass">No existe ningún grupo con ese nombre o la contraseña es incorrecta</string>
    <string name="login_team_name">Nombre del equipo</string>
    <string name="login_team_pass">Contraseña del equipo</string>
    <string name="login_join">Unirse a equipo</string>

    <!-- Settings activity strings -->
    <string name="settings_lang_text">Idioma</string>
    <string name="settings_lang_radio_en">Inglés</string>
    <string name="settings_lang_radio_es">Castellano</string>
    <string name="settings_lang_radio_text">Cambiar idioma de la app</string>
    <string name="settings_theme_radio_dark">Tema oscuro</string>
    <string name="settings_theme_radio_light">Tema claro</string>
    <string name="settings_theme_text">Tema</string>
    <string name="settings_change_image_title">Cambiar imagen de perfil</string>
    <string name="settings_change_image_summary">Cambia la imagen de perfil de tu grupo</string>
    <string name="settings_change_info_title">Cambiar contraseñas</string>
    <string name="settings_change_info_summary">Cambia la contraseña de tu cuenta y de tu equipo</string>
    <string name="settings_header_personal">Ajustes del usuario</string>
    <string name="settings_header_app">Ajustes de la aplicación</string>
    <string name="settings_dark_mode">Activar modo oscuro</string>
    <string name="settings_dark_mode_off">Modo oscuro desactivado</string>
    <string name="settings_dark_mode_on">Modo oscuro activado</string>
    <string name="settings_change_image_btn">Cambiar imagen</string>
    <string name="settings_header_info">Información de la aplicación</string>
    <string name="settings_change_pass_user_btn">Cambiar contraseña de usuario</string>
    <string name="settings_change_pass_team_btn">Cambiar contraseña de equipo</string>
    <string name="settings_change_pass_old">Contraseña vieja</string>
    <string name="settings_change_pass_new">Contraseña nueva</string>
    <string name="settings_wrong_pass">La contraseña no es correcta</string>
    <string name="settings_pass_updated">Contraseña actualizada</string>
    <string name="settings_change_pass_team">Nombre del equipo</string>
    <string name="settings_info_devs">Desarrolladores de la aplicación</string>
    <string name="settings_info_version">Versión de la aplicación</string>

    <string name="nombre_actividad">Nombre actividad</string>
    <string name="numero_participantes">Número de participantes máximo</string>
    <string name="explicacion">Explicación</string>
    <string name="ciudad">Seleccionar ubicación</string>
    <string name="fecha">Fecha</string>
    <string name="sugerir">Sugerir</string>
    <string name="crear">Crear</string>
    <string name="noCampoVacio">No puede haber ningún campo vacío</string>
    <string name="fechaActividadErronea">La fecha de la actividad debe ser posterior a la fecha actual</string>
    <string name="sugerirExito">Actividad sugerida con éxito. Espere a la validación de los administradores</string>
    <string name="crearExito">Actividad creada con éxito</string>
    <string name="actividadesInscrito">Actividades inscrito/a</string>
    <string name="actividadesNoInscrito">Actividades no inscrito/a</string>
    <string name="sugerirActividad">Sugerir actividad</string>
    <string name="crearActividad">Crear actividad</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="settings">Ajustes</string>
    <string name="mostrarActividades">Mostrar actividades</string>
    <string name="acerptarRechazarActividad">Aceptar/Rechazar actividades</string>
    <string name="aceptarActividad">¿Deseas aceptar esta actividad?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="activiadadAceptadaExito">Actividad aceptada con éxito</string>
    <string name="actividadRechazadaExito">Actividad rechazada con éxito</string>
    <string name="noActividades">No existe ninguna actividad</string>
    <string name="inscripcion">Inscripción correctamente realizada</string>
    <string name="desapuntar">Te has desapuntado de la actividad</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="desapuntarse">Desapuntarse</string>
    <string name="borrar">Borrar</string>
    <string name="borrado">Actividad borrada correctamente</string>
    <string name="invalidSession">Sesión no válida, vuelve a autenticarte</string>
    <string name="actividadExiste">Ya existe una actividad con el mismo, elige otro nombre por favor</string>
    <string name="mostrarListaEquiposParticipantes">Mostrar lista de equipos</string>
    <string name="noEquipos">No hay equipos inscritos a esta actividad</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="aceptada">Solicitud aceptada con éxito</string>
    <string name="rechazada">Solicitud rechazada con éxito</string>
    <string name="borrar_titulo">Actividad borrada</string>
    <string name="borrar_contenido">La siguiente actividad ha sido borrada: </string>
    <string name="crear_titulo">Actividad creada</string>
    <string name="crear_contenido">La siguiente actividad ha sido creada: </string>
    <string name="sugerencia_titulo">Actividad sugerida</string>
    <string name="sugerencia_contenido"> ha sugerido la siguiente actividad: </string>
    <string name="rechazar_titulo">Sugerencia rechazada</string>
    <string name="rechazar_contenido">La siguiente sugerencia ha sido rechazada: </string>
    <string name="aceptar_grupo_titulo">Sugerencia aceptada</string>
    <string name="aceptar_contenido_grupo">La siguiente sugerencia ha sido aceptada: </string>
    <string name="login_enter_pass">Introducir contraseña</string>
    <string name="apiKey">AIzaSyA1H1LQv2585yplooenK4xY1eb_iNnowyc</string>
    <string name="ubicacionCorrecta">La ubicación se ha guardado con éxito</string>
    <string name="ubicacionFallida">No se ha podido registrar la ubicación correctamente</string>
    <string name="verMapa">Ver mapa de actividades</string>
    <string name="subirImagen">Subir una imagen</string>
    <string name="seleccionarImagen">¿De dónde desea seleccionar la imagen?</string>
    <string name="galeria">Galería</string>
    <string name="camara">Cámara</string>
    <string name="noPermisoCamara">El permiso de cámara está denegado</string>
    <string name="uploading">La imagen se está subiendo</string>
    <string name="avisoImagen">Ya se ha seleccionado una imagen</string>
    <string name="sinEspecificar">Sin especificar</string>
    <string name="localizacion">Localización</string>
    <string name="settings_change_image_btn_default">Cargar imagen predeterminada</string>
    <string name="settings_change_image_changed">Imagen actualizada correctamente</string>
    <string name="admin">Administrador</string>
    <string name="direccionHttp">http://ec2-52-56-170-196.eu-west-2.compute.amazonaws.com/aarias023/WEB/das_grupal/</string>


</resources>