<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_lista"
            android:title="@string/mostrarActividades" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_crear"
            android:title="@string/crearActividad" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_aceptar_rechazar"
            android:title="@string/acerptarRechazarActividad" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_location"
            android:title="@string/verMapa" />
    </group>
    <group
        android:id="@+id/grupo2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_sesion"
            android:title="@string/logOut" />
    </group>

</menu>