<!-- This DrawerLayout has two children at the root  -->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sugerir_actividad_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- This LinearLayout represents the contents of the screen  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The ActionBar displayed at the top -->

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.SugerirActividad">


            <EditText
                android:id="@+id/sugerir_actividad_nombre_text"
                android:layout_width="321dp"
                android:layout_height="74dp"
                android:ems="10"
                android:hint="@string/nombre_actividad"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026" />

            <EditText
                android:id="@+id/sugerir_actividad_numero_text"
                android:layout_width="325dp"
                android:layout_height="75dp"
                android:ems="10"
                android:hint="@string/numero_participantes"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugerir_actividad_nombre_text"
                app:layout_constraintVertical_bias="0.031" />

            <EditText
                android:id="@+id/sugerir_actividad_explicacion_text"
                android:layout_width="361dp"
                android:layout_height="152dp"
                android:layout_marginBottom="72dp"
                android:ems="10"
                android:hint="@string/explicacion"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.709"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/sugerir_actividad_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugerir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugerir_actividad_explicacion_text"
                app:layout_constraintVertical_bias="0.523" />

            <EditText
                android:id="@+id/sugerir_actividad_fecha_text"
                android:layout_width="326dp"
                android:layout_height="57dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/fecha"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugerir_actividad_numero_text"
                app:layout_constraintVertical_bias="0.054" />

            <EditText
                android:id="@+id/sugerir_actividad_ciudad_text"
                android:layout_width="326dp"
                android:layout_height="57dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:editable="false"
                android:hint="@string/ciudad"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugerir_actividad_numero_text"
                app:layout_constraintVertical_bias="0.237" />

            <Button
                android:id="@+id/sugerir_actividad_boton_imagen"
                android:layout_width="224dp"
                android:layout_height="50dp"
                android:text="@string/subirImagen"
                app:layout_constraintBottom_toBottomOf="@+id/sugerir_actividad_boton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugerir_actividad_ciudad_text"
                app:layout_constraintVertical_bias="0.083" />

            <TextView
                android:id="@+id/sugerir_actividad_aviso_imagen"
                android:layout_width="325dp"
                android:layout_height="33dp"
                android:text="@string/avisoImagen"
                android:textSize="15dp"
                android:gravity="center"
                android:textColor="@color/quantum_googredA200"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugerir_actividad_boton_imagen"
                app:layout_constraintVertical_bias="0.073" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- The main content view where fragments are loaded -->
    </LinearLayout>

    <!-- The navigation drawer that comes from the left -->
    <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />
</androidx.drawerlayout.widget.DrawerLayout>